After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 702467 - audiobasesrc: missing calls to gst_buffer_unmap
audiobasesrc: missing calls to gst_buffer_unmap
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
git master
Other Linux
: Normal normal
: 1.1.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-06-17 14:06 UTC by Ognyan Tonchev (redstar_)
Modified: 2013-06-17 14:36 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Add missing calls to gst_buffer_unmap () (1.17 KB, patch)
2013-06-17 14:06 UTC, Ognyan Tonchev (redstar_)
none Details | Review

Description Ognyan Tonchev (redstar_) 2013-06-17 14:06:15 UTC
Created attachment 247035 [details] [review]
Add missing calls to gst_buffer_unmap ()

There are 2 missing calls to gst_buffer_unmap () in the error handling in create ().
Comment 1 Wim Taymans 2013-06-17 14:36:40 UTC
commit f240d34c7e611eb5233c62bcf5c19d6e3389e6af
Author: Ognyan Tonchev <ognyan@axis.com>
Date:   Mon Jun 17 16:34:26 2013 +0200

    audiobasesrc: add 2 missing gst_buffer_unmap () calls
    
    There are 2 missing calls to gst_buffer_unmap () in the error handling in
    create ().
    
    Fixes https://bugzilla.gnome.org/show_bug.cgi?id=702467